# CorrelationsRuinGD

./: BP_sweep.yml  README.md  bp.py  decor.py  environment.yml  example.ipynb  fa.py  models.py  modules.py  np.py  pyproject.toml  run.py  sweep.yml  utils.py
conf/: config.yaml
crgd/: __init__.py  conversion.py  decor.py  fa.py  models.py  np.py
