[project]
name = "crgd"
version = "0.0.1"
authors = [
  { name = "Nasir Ahmad" }
]
description = "The codebase for reproducing the simulations for the paper titled: 'Correlations are ruining your gradient descent'"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'torch',
  'torchvision',
  'numpy'
]

[tool.setuptools]
packages = ["crgd"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/nasiryahm/CorrelationsRuinGD"
"Bug Tracker" = "https://github.com/nasiryahm/CorrelationsRuinGD/issues"
